Fix overlap issue with sections.

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ header {
 
 .content {
   font-family: 'Roboto';
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -41,7 +41,7 @@ header {
 }
 
 .content ~ .content {
-  height: 90vh;
+  min-height: 90vh;
   margin-top: 200px;
 }
 
@@ -313,4 +313,8 @@ header {
 .link_descriptor {
   margin-right: 3px;
   color: rgba(0,0,0,0.3);
+}
+
+.ending {
+  margin-top: 200px;
 }
